# rust-seam-carving

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml
src/: array.rs  energy.rs  lib.rs  main.rs  parser.rs  seam.rs
tests/: integration_tests.rs
