[package]
name = "rsc"
version = "0.1.0"
authors = ["scortino <scortino@pm.me>"]
edition = "2018"
description = "Rust implementation of the seam carving algorithm"
readme = "README.md"
repository = "https://github.com/scortino/rust-seam-carving"
license-file = "LICENSE"
keywords = ["image resizing", "image retargeting", "image seams" , "content-aware image manipulation"]
categories = ["command-line-utilities", "multimedia::images"]


[dependencies]
crossbeam-utils = "0.8.8"
image = "0.24.2"
num-traits = "0.2.15"

[profile.release]
debug = true